--- a/app/Rmd/intro_FR.Rmd
+++ b/app/Rmd/intro_FR.Rmd
@@ -24,11 +24,11 @@ a:visited {color: #008040;}
 a:hover {color: #006080;}
 </style>
 
-```{r setup and libraries, echo=FALSE, include=FALSE, cache=FALSE}
+```{r setup-and-libraries, echo=FALSE, include=FALSE, cache=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="left")
 ```
 
-```{r load data and functions, echo=FALSE, include=FALSE, cache=FALSE}
+```{r load-data-and-functions, echo=FALSE, include=FALSE, cache=FALSE}
 minYear <- 2010
 load("../data/OpenData.RData")
 load("../data/OpenData_sardist.RData")
@@ -37,7 +37,7 @@ load("../data/SecureData.RData")
 lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source) # check helpers.R for a list of packages
 ```
 
-```{r Load Search Area, echo=FALSE, include=FALSE, cache=FALSE}
+```{r Load-Search-Area, echo=FALSE, include=FALSE, cache=FALSE}
 studyArea <- sf::st_read("{{path_to_geoms}}")
 # studyArea <- sf::st_read("geoms_slc.geojson")
 # Uncomment the following to test fixed polygon:
@@ -48,7 +48,7 @@ region <- st_read("../studyAreaTest/geoms_slc_MarBioRegion.geojson")
 site <- sf::st_centroid(studyArea)
 ```
 
-```{r parameters for area_map.r, echo=FALSE, include=FALSE, cache=FALSE}
+```{r parameters-for-area_map.r, echo=FALSE, include=FALSE, cache=FALSE}
 # The following defines studyBox geometry "look". studyBox_geom is input into area map or can be added to any map later
 studyBox_geom <- geom_sf(data=studyArea, fill=NA, col="red", size=1)
 
@@ -60,7 +60,7 @@ areaMap=areaMapList[[1]] # map
 bboxMap=areaMapList[[2]] #bounding box of the map
 ```
 
-```{r parameters for region_map.r, echo=FALSE, include=FALSE, cache=FALSE}
+```{r parameters-for-region_map.r, echo=FALSE, include=FALSE, cache=FALSE}
 # Bounding box for the region
 regionBox <- sf::st_bbox(region)
 
@@ -113,10 +113,10 @@ Le résultat de la recherche comprend les sections suivantes :
 Le présent rapport comprend des renseignements provenant de diverses sources ayant différents niveaux de contrôle de la qualité. Par conséquent, les sources de données dans le rapport sont classées en niveaux de qualité des données, auxquels sont associés les recommandations d’utilisation connexes.
 
 
-```{r table tiers read, echo=FALSE, cache=FALSE, include = FALSE}
+```{r table-tiers-read, echo=FALSE, cache=FALSE, include = FALSE}
 table_tier <- read.csv("../data/misc/table_tiers_EN.csv")
 ```
-```{r tier table}
+```{r tier-table}
 knitr::kable(table_tier,align="l",
       caption = "La définition des niveaux de qualité pour décrire les sources d’information interrogées et résumées dans ce rapport.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
@@ -145,7 +145,7 @@ Définitions pertinentes pour les espèces inscrites en vertu de la _Loi sur les
 <!-- FIN GÉNÉRIQUE -->
 
 # **CONTRIBUTEURS**
-```{r read contributors, echo=FALSE, cache=FALSE, include = FALSE}
+```{r read-contributors, echo=FALSE, cache=FALSE, include = FALSE}
 people <- read.csv("../data/misc/contributors.csv")
 people <- people$list
 sort(people)
