--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -34,13 +34,13 @@ Critical habitat presented in this section are available in the Government of Ca
 
 #### ***Area-specific SAR distribution and critical habitat search results***
 
-```{r sardist load, echo=FALSE, results='asis'}
+```{r sardist-load, echo=FALSE, results='asis'}
 #if(sardist_sf > 1){
 dist_table <- table_dist(sardist_sf, studyArea)
 #} else {NULL}
 ```
 *
-```{r dist result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r dist-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Dist_overlap_result <- nrow(dist_table)
 Query_output_dist <- if(Dist_overlap_result < 1){
   "The search area does not overlap with Species at Risk distribution range."
@@ -50,11 +50,11 @@ Query_output_dist <- if(Dist_overlap_result < 1){
 writeLines(Query_output_dist)
 ```
 
-```{r leatherback table, echo=FALSE, results='asis'}
+```{r leatherback-table, echo=FALSE, results='asis'}
 crit_table <- table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
 ```
 *
-```{r crit check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r crit-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
  crit_result <- nrow(crit_table)
  Query_output_crit <- if(crit_result < 1){
    "The search area does not overlap with defined Species at Risk Critical Habitat."
@@ -64,7 +64,7 @@ crit_table <- table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
  writeLines(Query_output_crit)
 ```
 <br>
-```{r  dist?, echo=FALSE, results='asis'}
+```{r  dist-table, echo=FALSE, results='asis'}
 Dist_query_output_table<-if(Dist_overlap_result < 1){
   ""
 } else {
@@ -73,7 +73,7 @@ Dist_query_output_table<-if(Dist_overlap_result < 1){
 if(Dist_overlap_result > 1){Dist_query_output_table}
 ```
 
-```{r crit table, echo=FALSE, results='asis'}
+```{r crit-table, echo=FALSE, results='asis'}
 crit_table <- unique( crit_table[ , 1:3 ] )
 Crithab_query_output_table <- if(crit_result <= 1){
   ""
@@ -83,7 +83,7 @@ if(crit_result > 0){Crithab_query_output_table}
 ```
 <br>
 
-```{r crithab plot setup, echo=FALSE, results='asis'}
+```{r crithab-plot-setup, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
 poly_sf <- ClippedCritHab_sf
 attribute <- "Common_Nam"
@@ -105,7 +105,7 @@ if (!is.null(clipped$mapData)){
 }  
 ```
 <br>
-```{r leatherback plot setup,  echo=FALSE, results='asis'}
+```{r leatherback-plot-setup,  echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
 poly_sf <- leatherback_sf
 attribute <- "NONE"
