--- a/app/Rmd/report_SARA_FR.Rmd
+++ b/app/Rmd/report_SARA_FR.Rmd
@@ -34,13 +34,13 @@ Les habitats essentiels présentés dans cette section sont disponibles sur le p
 
 #### ***Répartition des espèces en péril et résultats des recherches sur l’habitat essentiel propres à une zone***
 
-```{r sardist load, echo=FALSE, results='asis'}
+```{r sardist-load, echo=FALSE, results='asis'}
 #if(sardist_sf > 1){
 dist_table <- table_dist(sardist_sf, studyArea)
 #} else {NULL}
 ```
 *
-```{r dist result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r dist-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Dist_overlap_result <- nrow(dist_table)
 Query_output_dist <- if(Dist_overlap_result < 1){
   "La zone de recherche ne chevauche pas l’aire de répartition des espèces en péril."
@@ -50,11 +50,11 @@ Query_output_dist <- if(Dist_overlap_result < 1){
 writeLines(Query_output_dist)
 ```
 
-```{r leatherback table, echo=FALSE, results='asis'}
+```{r leatherback-table, echo=FALSE, results='asis'}
 crit_table <- table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
 ```
 *
-```{r crit result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r crit-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
  crit_result <- nrow(crit_table)
  Query_output_crit <- if(crit_result < 1){
    "La zone de recherche ne chevauche pas l’habitat essentiel défini des espèces en péril."
@@ -64,7 +64,7 @@ crit_table <- table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
  writeLines(Query_output_crit)
 ```
 
-```{r dist?, echo=FALSE, results='asis'}
+```{r dist-table, echo=FALSE, results='asis'}
 Dist_query_output_table <- if(Dist_overlap_result < 1){
   ""
 } else {
@@ -72,7 +72,7 @@ Dist_query_output_table <- if(Dist_overlap_result < 1){
 if(Dist_overlap_result > 1){Dist_query_output_table}
 ```
 
-```{r crithab table, echo=FALSE, results='asis'}
+```{r crithab-table, echo=FALSE, results='asis'}
 crit_table <- unique( crit_table[ , 1:3 ] )
 Crithab_query_output_table <- if(crit_result <= 1){
   ""
@@ -82,7 +82,7 @@ if(crit_result > 0){Crithab_query_output_table}
 ```
 
 
-```{r crithab plot setup, echo=FALSE, results='asis'}
+```{r crithab-plot-setup, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
 poly_sf <- ClippedCritHab_sf
 attribute <- "Common_Nam"
@@ -104,7 +104,7 @@ if (!is.null(clipped$mapData)){
 }  
 ```
 
-```{r leatherback plot setup, echo=FALSE, results='asis'}
+```{r leatherback-plot-setup, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
 poly_sf <- leatherback_sf
 attribute <- "NONE"
