--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -10,7 +10,7 @@ Please refer to the Passive Acoustic Cetacean Map (PACM) to explore when and whe
 
 This section does not endeavor to describe every source of information available; the data presented does not represent all available cetacean sightings data within the search area and additional sightings may be available from other sources, or more recent data may be available than what is presented here. In addition to the presence-only data, there may be data available that can be used to support species-specific conclusions about habitat preferences and possible or known occurrence near and within the search area. Please refer to the cited publications for additional information and contact Angelia Vanderlaan (North Atlantic Right Whales) and Hilary Moors-Murphy (other cetacean species) to discuss additional sources of information (e.g., acoustic detections). Data and sources not explicitly included in this report include information from past studies/publications, acoustic detections, prey sampling and tagging. While the value of these data in predicting and describing cetacean occurrences is vital, these types of data are not available for all species and are not yet available for data querying. In the future, as information from other data sources becomes available, these new data will help to provide a more comprehensive understanding of cetacean habitat use and occurrence in the search areas.
 
-```{r cetacean setup, echo=FALSE, include=FALSE, cache=FALSE}
+```{r cetacean-setup, echo=FALSE, include=FALSE, cache=FALSE}
 whale_col=values=c("Beluga Whale: Endangered (SARA & COSEWIC)"="cyan3","Blue Whale: Endangered (SARA & COSEWIC)"="black", "Fin Whale: Special Concern (SARA & COSEWIC)"="chartreuse4", "Harbour Porpoise: Threatened (SARA) Special Concern (COSEWIC)"="red","Killer Whale: No Status (SARA) & Special Concern (COSEWIC)"="#00AFBB", "North Atlantic Right Whale: Endangered (SARA & COSEWIC)"="darkorchid4", "Northern Bottlenose Whale: Endangered (SARA & COSEWIC)"="#0827EF", "Sei Whale: No Status (SARA) & Endangered (COSEWIC)"="#EF6408",  "Sowerby's Beaked Whale: Special Concern (SARA & COSEWIC)"="#F5A4E7")
 ```
 
@@ -49,7 +49,7 @@ wsdb_points <- sfcoords_as_cols(outputList$mapData)
 }
 ```
 *
-```{r wsdb result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r wsdb-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_wsdb <- if (is.null(outputList)) {
    "There are no relevant records in the WSDB for this search area."
  } else {
@@ -86,7 +86,7 @@ if (!is.null(outputList)) {
 }
 ```
 *
-```{r whitehead result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r whitehead-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_whitehead <-  if (is.null(outputList)) {
    "There are no relevant records in the Whitehead Lab database for this search area."
  } else {
@@ -125,7 +125,7 @@ if (!is.null(outputList)) {
 }
 ```
 *
-```{r narwc result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r narwc-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_narwc <- if (is.null(outputList)) {
    "There are no relevant records in the NARWC database for this search area."
  } else {
@@ -155,7 +155,7 @@ An OBIS search [@OBIS] was conducted to find additional relevant records for cet
 
 #### ***Area-specific OBIS cetacean search results***
 
-```{r obis cetecean, include=FALSE, cache=FALSE}
+```{r obis-cetecean, include=FALSE, cache=FALSE}
 outputList <- master_intersect(obis_cet_sf, region, studyArea, mapBbox = bboxMap)
 
 if (!is.null(outputList)) {
@@ -163,7 +163,7 @@ if (!is.null(outputList)) {
 }
 ```
 *
-```{r obis cetecean result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r obis-cetecean-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_obis_cet <-  if (is.null(outputList)) {
   "There are no relevant records of cetaceans in the Ocean Biodiversity Information System (OBIS) for this search area."
 } else {
@@ -202,7 +202,7 @@ Important usage considerations: model predictions in this section should not be 
 # sei_whale_sf<-stars::st_as_stars(sei_whale)%>%sf::st_as_sf()
 table_sdm <- sdm_table(fin_whale_sf, harbour_porpoise_sf, humpback_whale_sf, sei_whale_sf, studyArea)
 ```
-```{r sdm table}
+```{r sdm-table}
  knitr::kable(table_sdm, align="cccc", caption="Quality Tier: Low. Security level: none. Results showing if the search area overlap with predicted Priority Areas to Enhance Monitoring of several species of cetaceans (Fin Whale, Harbour Porpoise, Humpback Whale and Sei Whale). TRUE = polygon does overlap with priority area; FALSE = polygon does NOT overlap with priority area.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
@@ -225,7 +225,7 @@ Please see a list of all sources of information used in @Lesage2018 and the Open
 
 #### ***Area-specific Blue Whale Important Habitat search results***
 
-```{r overlap bw habitat, echo=FALSE, results='asis'}
+```{r overlap-bw-habitat, echo=FALSE, results='asis'}
 poly_sf <- BlueWhale_ImpHab_sf
 attribute <- "Activity"
 
@@ -233,7 +233,7 @@ attribute <- "Activity"
 clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
 ```
 *
-```{r bw result, echo=FALSE, results='asis'}
+```{r bw-result, echo=FALSE, results='asis'}
 polyText <- if(is.null(clipped$studyData)){"Search area does not overlap with Blue Whale Important Habitat in the Western North Atlantic."
 } else {"Search area overlaps with Blue Whale Important Habitat in the Western North Atlantic."}
 
@@ -274,7 +274,7 @@ The inter-canyon habitat area polygon was delineated using the 500 m depth conto
 
 #### ***Area-specific Northern Bottlenose Whale Important Habitat in inter-canyon areas on the eastern Scotian Shelf search results***
 
-```{r overlap nbw habitat, echo=FALSE, results='asis'}
+```{r overlap-nbw-habitat, echo=FALSE, results='asis'}
 poly_sf <- NBNW_ImpHab_sf
 attribute <- "NONE"
 
@@ -282,7 +282,7 @@ attribute <- "NONE"
 clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
 ```
 *
-```{r nbw result, echo=FALSE, results='asis'}
+```{r nbw-result, echo=FALSE, results='asis'}
 polyText <- if(is.null(clipped$studyData)){"Search area does not overlap with Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf."
 } else {"Search area overlaps with Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf."}
 
@@ -292,12 +292,12 @@ polyText <- if(is.null(clipped$studyData)){"Search area does not overlap with No
 
 ```{r nbw-region-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Proposed Northern Bottlenose Whales important habitat in inter-canyon areas on the eastern Scotian Shelf. Northern Bottlenose Whales are present year-round in the inter-canyon areas, which function as foraging habitat and movement corridors. Note that the full extent of important habitat for Scotian Shelf Northern Bottlenose Whales remains unknown. Please see additional information in <a href="http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf">DFO 2020</a>.'}
 if (!is.null(clipped$regionData)){
-  plot_polygons(regionMap,regionBox,studyBox_geom, clipped$regionData,attribute)
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionData, attribute)
 }
 ```
 
 ```{r nbw-area-plot, fig.height=4, fig.width=11, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf.'}
 if (!is.null(clipped$mapData)){
-  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapData,attribute)
+  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapData, attribute)
 }
 ```
