--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -12,18 +12,18 @@ Security level: none
 
 Dataset description from the Open Data record [@OpenData_MAR_RV]: The Fisheries and Oceans Canada ecosystem Research Vessel (RV) surveys are conducted annually (since 1970) and are a source of integrated ecosystem monitoring data. These survey data are the primary data source for monitoring trends in species distribution, abundance, and biological condition within the region, and also provide data to the Atlantic Zonal Monitoring Program (AZMP) for monitoring hydrographic conditions, along with zooplankton and phytoplankton. The surveys follow a stratified random sampling design, and include sampling using a bottom otter trawl, CTD rosette and vertical plankton tows. Data from the bottom trawl catch are used to monitor the distribution and abundance of fish and invertebrates throughout the Scotian Shelf, Bay of Fundy and Georges Bank. 
 
-```{r table RV read, echo=FALSE, cache=FALSE, include = FALSE}
+```{r table-RV-read, echo=FALSE, cache=FALSE, include = FALSE}
 table_RV <- read.csv("../data/misc/table_RV_EN.csv")
 table_RV<- table_RV %>% dplyr::rename("Season/Months"=Season.Months,"Description of Geographic Range"=Description.of.Geographic.Range)
 ```
-```{r RV table setup}
+```{r RV-table-setup}
 knitr::kable(table_RV, align="l",
       caption = "Summary of data collected during the 4 distinct Maritimes Research Vessel (RV) Surveys. See Chadwick et al. (2007) for more information on the timeline and periodic adjustment of the 4VSW surveys.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
 #### ***Area-specific Maritimes Research Vessel (RV) Survey search results***
 
-```{r RV results, include=FALSE, cache=FALSE}
+```{r RV-results, include=FALSE, cache=FALSE}
   outputList <- master_intersect(RVCatch_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
 
 Samples_bbox <- outputList$mapPoints
@@ -35,7 +35,7 @@ if (!is.null(outputList)) {
 }
 ```
 *
-```{r RV check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r RV-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_RV <- if (is.null(outputList)) {
     "There are no relevant records in the Maritimes Research Vessel (RV) Survey for this search area."
   } else {
@@ -45,19 +45,19 @@ Report_RV<-noquote(Report_RV)
 writeLines(Report_RV)
 ```
 
-```{r RV- plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing the search area defined by the user (red outline) used to query information from the Maritimes Research Vessel (RV) Trawl Survey. Black lines and arrows indicate the location and direction of each bottom otter trawl sample. Frequency represents number of trawls in which a given species was sampled, relative to the total number of trawls within the search area'}
+```{r RV-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing the search area defined by the user (red outline) used to query information from the Maritimes Research Vessel (RV) Trawl Survey. Black lines and arrows indicate the location and direction of each bottom otter trawl sample. Frequency represents number of trawls in which a given species was sampled, relative to the total number of trawls within the search area'}
 if (!is.null(outputList)) {
 areaMap + geom_segment(aes(x = Samples_bbox$long, y = Samples_bbox$lat, xend = Samples_bbox$ELONG, yend = endy <- Samples_bbox$ELAT),arrow=arrow(length = unit(0.2,"cm")), size = 0.5)
 }
 ```
 <br>
-```{r RV SAR table}
+```{r RV-SAR table}
 if (!is.null(outputList)) {
  knitr::kable(table_rv2, align="l", caption="\\label{tab:rv_SAR_table} Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or species assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 <br>
-```{r RV freq table}
+```{r RV-freq-table}
 if (!is.null(outputList)) {
 knitr::kable(table_rv1, align="l", caption="\\label{tab:rv_freq_table}Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
@@ -89,7 +89,7 @@ The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by 
 
 #### ***Area-specific MARFIS & ISDB search results***
 
-```{r marfis isdb results, include=FALSE, cache=FALSE}
+```{r marfis-isdb-results, include=FALSE, cache=FALSE}
 outputListI <- master_intersect(isdb_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
 outputListM <- master_intersect(marfis_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
 Samples_bboxI <- outputListI$mapPoints
@@ -109,7 +109,7 @@ if (!is.null(outputListM)) {
 }
 ```
 *
-```{r isdb check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r isdb-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_isdb <- if (is.null(outputListI)) {
     "There are no relevant records in the Industry Survey Database (ISDB) for this search area."
   } else {
@@ -120,7 +120,7 @@ writeLines(Report_isdb)
 ```
 
 *
-```{r marfis check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r marfis-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_marfis <- if (is.null(outputListM)) {
     "There are no relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
   } else {
@@ -139,22 +139,22 @@ if (!is.null(outputListI) & !is.null(outputListM)) {
         areaMap + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
 }
 ```
-```{r isdb SAR table}
+```{r isdb-SAR-table}
 if (!is.null(outputListI)) {
 knitr::kable(table_isdb2, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
-```{r isdb all table}
+```{r isdb-all-table}
 if (!is.null(outputListI)) {
   knitr::kable(table_isdb1, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
-```{r marfis SAR table}
+```{r marfis-SAR-table}
 if (!is.null(outputListM)) {
   knitr::kable(table_mar2, align="l", caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
-```{r marfis all table}
+```{r marfis-all-table}
 if (!is.null(outputListM)) {
   knitr::kable(table_mar1, caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
 } %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
@@ -171,7 +171,7 @@ OBIS is a global, open-access data and information clearing-house on marine biod
 
 #### ***Area-specific OBIS fish and invertebrate search results***
 
-```{r obis results, include=FALSE, cache=FALSE}
+```{r obis-results, include=FALSE, cache=FALSE}
 outputList <- master_intersect(obis_fish_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
 Samples_bbox <- outputList$mapPoints
 
@@ -181,7 +181,7 @@ if (!is.null(outputList)) {
 }
 ```
 *
-```{r obis check, echo=FALSE, results='asis',}
+```{r obis-check, echo=FALSE, results='asis',}
 Report_obis <- if (is.null(outputList)) {
   "There are no relevant records in the Ocean Biodiversity Information System (OBIS) for this search area."
 } else {
@@ -196,7 +196,7 @@ if (!is.null(outputList)) {
     geom_point(data = Samples_bbox, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
 }
 ```
-```{r obis table, echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
+```{r obis-table, echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
 if (!is.null(outputList)) {
   knitr::kable(table_obis1, align="l", caption="Quality Tier: Medium. Security level: none. Ocean Biodiversity Information System (OBIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
