--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -18,27 +18,27 @@ Dataset description from the Open Data record [@OpenData_ebsa]: Ecologically and
 #### ***Area-specific EBSA search results***  
 
 *
-```{r EBSA overlap, echo=FALSE, results='asis'}
+```{r EBSA-overlap, echo=FALSE, results='asis'}
 #function for overlap
 EBSA_overlap(EBSA_sf, studyArea)
 ```
 
-```{r EBSA report, echo=FALSE, results='asis'}
+```{r EBSA-report, echo=FALSE, results='asis'}
 #function for report
 EBSA_report(EBSA_sf, studyArea)
 ```
 
-```{r EBSA report url, echo=FALSE, results='asis'}
+```{r EBSA-report-url, echo=FALSE, results='asis'}
 #function for report url
 EBSA_reporturl(EBSA_sf, studyArea)
 ```
 
-```{r EBSA loc, echo=FALSE, results='asis'}
+```{r EBSA-loc, echo=FALSE, results='asis'}
 #function for location
 EBSA_location(EBSA_sf, studyArea)
 ```
 
-```{r EBSA bioregion, echo=FALSE, results='asis'}
+```{r EBSA-bioregion, echo=FALSE, results='asis'}
 #function for bioregion
 EBSA_bioregion(EBSA_sf, studyArea)
 ```
