--- a/app/Rmd/report_habitat_FR.Rmd
+++ b/app/Rmd/report_habitat_FR.Rmd
@@ -21,60 +21,37 @@ Remarques sur les données :
 #### ***Résultats de la recherche sur la végétation intertidale et le fucus, par zone***  
 
 ```{r overlap rockweed, echo=FALSE, results='asis'}
-rockweed_intersect <- st_intersection(studyArea,st_make_valid(rockweed_sf))
-rockweed_result<-as.numeric(nrow(rockweed_intersect))
+# define polygon dataset and attribute to plot
+poly_sf=rockweed_sf
+attribute="RWP"
+
+# intersect polyData with 3 polygons (region, map area, and study box)
+clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
 ```
 *
 ```{r overlap rockweed output, echo=FALSE, results='asis'}
- Query_output_rockweed<-if(rockweed_result < 1){"There are no relevant records of predicted intertidal vegetation for this search area."
-   } else {"There are relevant records of predicted intertidal vegetation for this search area."}
- Query_output_rockweed<-noquote(Query_output_rockweed)
- writeLines(Query_output_rockweed)
+ 
+polyText<-if(is.null(clipped$studyPoly)){"Il n’existe aucun registre pertinent sur la végétation intertidale prévue pour cette zone de recherche."
+} else {"Il existe des registres pertinentes sur la végétation intertidale prévue pour cette zone de recherche."}
+
+ polyText<-noquote(polyText)
+ writeLines(polyText)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
-plot_rockweed <- function(rockweed_sf, areaMap, bboxMap) {
-  
-  # crop rockweed layer to the map area to speed up plotting
-  rockweed=st_crop(st_make_valid(rockweed_sf),bboxMap)
-  
-  if (dim(rockweed)[1]==0){
-    rockweedMap=NULL
-  }else{
-    
-    # define axis limit
-    axLim=ggplot2::coord_sf(xlim = c(bboxMap["xmin"], bboxMap["xmax"]), ylim = c(bboxMap["ymin"], bboxMap["ymax"]),expand=FALSE)
-    
-    # replace codes with words
-    rockweed$Rockweed=""
-    rockweed$Rockweed[which(rockweed$RWP==1)]="1-Present"
-    rockweed$Rockweed[which(rockweed$RWP==2)]="2-Likely Present"
-    rockweed$Rockweed[which(rockweed$RWP==5)]="5-Unknown"
-    rockweed$Rockweed[which(rockweed$RWP==0)]="Not Present"
-    
-    rockweedMap <- areaMap +
-      geom_sf(data=rockweed, aes(fill=Rockweed), colour=NA)+
-      scale_fill_manual(values=c("#009E73", "#E69F00", "#0072B2","#999999"))+
-      studyBox_geom +
-      axLim
-  }
-  
-  return(rockweedMap)
-  
-}
-if(rockweed_result > 1){print(
-  plot_rockweed(rockweed_sf, areaMap, bboxMap))}
+```{r, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur : l’emplacement du projet ou de l’activité proposé est surligné en jaune (polygone d’entrée), entouré d’une zone exposée ou d’une zone tampon définie par l’utilisateur en bleu. La figure illustre le chevauchement entre la zone de recherche et les cartes satellitaires de la végétation intertidale et des polygones de présence de fucus.'}
+if(!is.null(clipped$studyPoly)){print(
+  plot_polygons(areaMap,bboxMap,studyBox_geom, clipped$mapPoly,attribute))}
 ```
 
 ```{r table rockweed, echo=FALSE, cache=FALSE, include = FALSE}
-if(rockweed_result > 1){
-  rwTable <- rockweedStats(rockweed_sf, studyArea)}
+if(!is.null(clipped$studyPoly)){
+  rwTable <- rockweedStats(clipped$studyPoly, studyArea)}
 ```
+
 ```{r}
-if(rockweed_result > 1){
+if(!is.null(clipped$studyPoly)){
 knitr::kable(rwTable,align="l",
-             caption = "Number of vegetation polygons and surface area occupied by each category for the study area. Total intertidal vegetations is a sum of all categories.", booktabs = T, escape = F, linesep="") %>%
+             caption = "Nombre de polygones de végétation et la superficie occupée par chaque catégorie pour la zone d’étude. La végétation intertidale totale est la somme de tous les catégories.", booktabs = T, escape = F, linesep="") %>%
   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 } 
 ```
-
