--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -39,10 +39,10 @@ lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE),so
 ```
 
 ```{r  Load-Search-Area, echo=FALSE, include=FALSE, cache=FALSE}
-# studyArea <- sf::st_read("{{path_to_geoms}}")
+studyArea <- sf::st_read("{{path_to_geoms}}")
 # studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson"))
 # Uncomment the following to test fixed polygon:
-studyArea <- st_read("../studyAreaTest/geoms_slc_test.geojson")#Offshore
+# studyArea <- st_read("../studyAreaTest/geoms_slc_test.geojson")#Offshore
 # studyArea <- st_read("../studyAreaTest/geoms_slc_coastal_test.geojson")#coastal
 # studyArea <- st_read("../studyAreaTest/geoms_slc_no_land.geojson") #no land
 region <- st_read(here::here("app/studyAreaTest/geoms_slc_MarBioRegion.geojson"))
