--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -218,25 +218,26 @@ OCEARCH is a data-centric organization built to help scientists collect previous
 
 
 ```{r ocearch-results, include=FALSE, cache=FALSE}
-outputList <- master_intersect(ocearch_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
-Samples_bbox <- outputList$mapPoints
+ocearchOutputList <- master_intersect(ocearch_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
 
 ```
 
 
 ```{r ocearch-check, echo=FALSE, results='asis',}
-Report_ocearch <- if (is.null(outputList)) {
+Report_ocearch <- if (is.null(ocearchOutputList)) {
   "There are no relevant White Shark records in the OCEARCH Shark Tracker for this search area."
 } else {
-  "There are relevant White Shark records in OCEARCH Shark Tracker search results for this search area."
+  numRecords <- length(ocearchOutputList$studyData$geometry)
+  distinctIndv <- dplyr::n_distinct(ocearchOutputList$studyData$ID)
+  paste("There are", numRecords, "relevant White Shark records for", distinctIndv, "individuals in OCEARCH Shark Tracker search results for this search area.")
 }
 Report_obis<-noquote(Report_ocearch)
 writeLines(Report_ocearch)
 ```
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user (red outline) was used to query information from OCEARCH Shark Tracker observation records, for White Shark. Dataset set has not yet been completely error-checked. The absence of a species in this figure should be interpreted as an absence of tracking data, not necessarily as an absence of the species in the area.'}
-if (!is.null(outputList)) {
+if (!is.null(ocearchOutputList)) {
   areaMap +
-    geom_point(data = Samples_bbox, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
+    geom_point(data = ocearchOutputList$mapPoints, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
 }
 ```
 
