--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -20,47 +20,40 @@ Dataset description from the Open Data record [@OpenData_ebsa]: Ecologically and
 
 -   
 
-```{r EBSA-overlap, echo=FALSE, results='asis'}
+```{r EBSA-results, echo=FALSE, results='asis'}
 #function for overlap
-EBSA_overlap(EBSA_sf, studyArea)
+EBSAoutput <- master_intersect(EBSA_sf, region, studyArea, bboxMap)
+
+# define polygon dataset and attribute to plot
+attribute <- "NONE"
+```
+
+```{r EBSA-check, echo=FALSE, results='asis'}
+#function for overlap
+Query_output_EBSA<-if(is.null(EBSAoutput)){
+    "The search area does not overlap with identified Ecologically and Biologically Significant Areas (EBSA)."
+  } else {
+    "The search area overlaps with identified Ecologically and Biologically Significant Areas (EBSA)."
+  }
+Query_output_EBSA2<-noquote(Query_output_EBSA)
+
+writeLines(Query_output_EBSA)
+
 ```
 
 ```{r EBSA-report, echo=FALSE, results='asis'}
 #function for report
-EBSA_report(EBSA_sf, studyArea)
+EBSA_report(EBSAoutput$studyData, lang="EN")
 ```
 
-```{r EBSA-report-url, echo=FALSE, results='asis'}
-#function for report url
-EBSA_reporturl(EBSA_sf, studyArea)
-```
-
-```{r EBSA-loc, echo=FALSE, results='asis'}
-#function for location
-EBSA_location(EBSA_sf, studyArea)
-```
-
-```{r EBSA-bioregion, echo=FALSE, results='asis'}
-#function for bioregion
-EBSA_bioregion(EBSA_sf, studyArea)
-```
-
-```{r overlap-EBSA-plot, echo=FALSE, results='asis'}
-# define polygon dataset and attribute to plot
-poly_sf <- EBSA_sf
-attribute <- "NONE"
-
-# intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
-```
 
 ```{r EBSA-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) relative to the search area defined by the user (red outline).'}
-if (!is.null(clipped$regionData)){
-  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionData, attribute)
+if (!is.null(EBSAoutput$regionData)){
+  plot_polygons(regionMap, regionBox, studyBox_geom, EBSAoutput$regionData, attribute)
 }
 ```
 
 ```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area defined by the user (red outline).'}
-if(!is.null(clipped$studyData)){print(
-  plot_polygons(areaMap,bboxMap,studyBox_geom, clipped$mapData,attribute))}
+if(!is.null(EBSAoutput$studyData)){print(
+  plot_polygons(areaMap,bboxMap,studyBox_geom, EBSAoutput$mapData,attribute))}
 ```
